https://www.curseforge.com/wow/addons/gladiatorlossa2
https://github.com/Rhykes/GladiatorlosSA2
===========================================
GSA uses the following version number scheme: X.Y.Z (ex: 3.7.2)
X - Increments following significant code rewrites or major spell library updates. This usually happens with a new expansion.
Y - Increments with any significant code rewrite that includes major bug fixes or features, or any update that adds new sound files.
Z - Increments with any update that does not follow the above, such as minor bug fixes, new spells using sounds already in the library, etc.
If you maintain forks or translations of GSA2, any X or Y increment may require your attention.

Note: I do NOT support ANY version of GSA2 outside of the latest Retail Live and BETA/PTR versions of the addon.
I do not currently support Classic.
I am currently working on support for Burning Crusade Classic.
I will never support older versions for Private Servers.
Please stop asking. I will not help you.
===========================================
- version TBC-B1 (2.5.1)

!! This is an early work-in-progress version of GSA2 for Burning Crusade Classic. !!
Expect incomplete spell libraries and missing audio cues.
I am only interested in lua errors and sounds that play in the options menu but not during actual combat.

General
* Updated version info.

Druid
* Completed spell library update.

Hunter
* Completed spell library update.

Mage
* Completed spell library update.